2008-08-12  Till Kamppeter <till.kamppeter@gmail.com>

	* db/source/driver/pxlmono.xml: Added HP LaserJet 1320 (Ubuntu bug
	  #172550).

	* printer/Okidata-B2200n.xml, printer/Okidata-B2200.xml,
	  printer/Okidata-B2400n.xml, printer/Okidata-B2400.xml,
	  printer/Okidata-B2540_MFP.xml, printer/Okidata-B4200.xml,
	  printer/Okidata-B4250.xml, printer/Okidata-B4300.xml,
	  printer/Okidata-B4350.xml, printer/Okidata-B4400n.xml,
	  printer/Okidata-B4400.xml, printer/Okidata-B4545_MFP.xml,
	  printer/Okidata-B4600n_PS.xml, printer/Okidata-B4600n.xml,
	  printer/Okidata-B4600.xml, printer/Okidata-B6200n.xml,
	  printer/Okidata-B6200.xml, printer/Okidata-B6250dn.xml,
	  printer/Okidata-B6250n.xml, printer/Okidata-B6250.xml,
	  printer/Okidata-B6300dn.xml, printer/Okidata-B6300n.xml,
	  printer/Okidata-B6300.xml, printer/Okidata-B6500dn.xml,
	  printer/Okidata-B6500n.xml, printer/Okidata-B6500.xml,
	  printer/Okidata-C5300.xml, printer/Okidata-C5400dn.xml,
	  printer/Okidata-C5400dtn.xml, printer/Okidata-C5400n.xml,
	  printer/Okidata-C5400tn.xml, printer/Okidata-C5400.xml,
	  printer/Okidata-C5540_MFP.xml, printer/Okidata-C5550_MFP.xml,
	  printer/Okidata-C5700dn.xml, printer/Okidata-C5700n.xml,
	  printer/Okidata-C5750.xml, printer/Okidata-C5900cdtn.xml,
	  printer/Okidata-C5900dn.xml, printer/Okidata-C5900dtn.xml,
	  printer/Okidata-C5900n.xml, printer/Okidata-C6000dn.xml,
	  printer/Okidata-C6000n.xml, printer/Okidata-C6050dn.xml,
	  printer/Okidata-C6050n.xml, printer/Okidata-C6100dtn.xml,
	  printer/Okidata-C6100hdn.xml, printer/Okidata-C6100n.xml,
	  printer/Okidata-C6100.xml, printer/Okidata-C6150dn.xml,
	  printer/Okidata-C6150dtn.xml, printer/Okidata-C6150hdn.xml,
	  printer/Okidata-C6150n.xml, printer/Okidata-C710dn.xml,
	  printer/Okidata-C710dtn.xml, printer/Okidata-C710n.xml,
	  printer/Okidata-C7300dn.xml, printer/Okidata-C7300n.xml,
	  printer/Okidata-C7300.xml, printer/Okidata-C7350hdn.xml,
	  printer/Okidata-C7350n.xml, printer/Okidata-C7500hdn.xml,