@@ -627,6 +627,11 @@
       <arg_defval>na</arg_defval>
      </constraint>
      <constraint sense="false">
+      <make>Epson</make>
+      <model>LP-S7500</model>
+      <arg_defval>na</arg_defval>
+     </constraint>
+     <constraint sense="false">
       <make>Oki</make>
       <model>Okipage 10ex</model>
       <arg_defval>na</arg_defval>
