@@ -1015,6 +1015,10 @@
       <printer>printer/Epson-LP-S6500</printer>
       <arg_defval>na</arg_defval>
      </constraint>
+     <constraint sense="false">
+      <printer>printer/Epson-LP-S7500</printer>
+      <arg_defval>na</arg_defval>
+     </constraint>
     </constraints>
    </enum_val>
    <enum_val id="ev/900">
@@ -1146,6 +1150,10 @@
       <printer>printer/Epson-LP-S6500</printer>
       <arg_defval>na</arg_defval>
      </constraint>
+     <constraint sense="false">
+      <printer>printer/Epson-LP-S7500</printer>
+      <arg_defval>na</arg_defval>
+     </constraint>
     </constraints>
    </enum_val>
    <enum_val id="ev/901">
@@ -1269,6 +1277,10 @@
       <printer>printer/Epson-LP-S6500</printer>
       <arg_defval>na</arg_defval>
      </constraint>
+     <constraint sense="false">
+      <printer>printer/Epson-LP-S7500</printer>
+      <arg_defval>na</arg_defval>
+     </constraint>
     </constraints>
    </enum_val>
    <enum_val id="ev/902">
@@ -1390,6 +1402,10 @@
      </constraint>
      <constraint sense="false">
       <printer>printer/Epson-LP-S6500</printer>
+      <arg_defval>na</arg_defval>
+     </constraint>
+     <constraint sense="false">
+      <printer>printer/Epson-LP-S7500</printer>
       <arg_defval>na</arg_defval>
      </constraint>
     </constraints>
