@@ -205,6 +205,11 @@
       <printer>printer/Epson-LP-S6500</printer>
       <arg_defval>ev/eplaser-jp-Model-lps6500</arg_defval>
      </constraint>
+     <constraint sense="true">
+      <driver>eplaser-jp</driver>
+      <printer>printer/Epson-LP-S7500</printer>
+      <arg_defval>ev/eplaser-jp-Model-lps7500</arg_defval>
+     </constraint>
   </constraints>
   <enum_vals>
    <enum_val id="ev/eplaser-jp-Model-lp1800">
@@ -1040,6 +1045,28 @@
      <constraint sense="true">
       <driver>eplaser-jp</driver>
       <printer>printer/Epson-LP-S6500</printer>
+     </constraint>
+    </constraints>
+   </enum_val>
+   <enum_val id="ev/eplaser-jp-Model-lps7500">
+    <ev_longname>
+     <en>Epson LP-S7500</en>
+    </ev_longname>
+    <!-- A multilingual <comments> block can appear here, too;
+         it should be treated as documentation for the user. -->
+    <ev_shortname>
+     <en>lps7500</en>
+     <!-- Until someone tells me how to learn the user locale in 
+          backends, the shortname must be monolingual in <en>! -->
+    </ev_shortname>
+    <ev_driverval>lp8500c</ev_driverval>
+    <constraints>
+     <constraint sense="false">
+      <driver>eplaser-jp</driver>
+     </constraint>
+     <constraint sense="true">
+      <driver>eplaser-jp</driver>
+      <printer>printer/Epson-LP-S7500</printer>
      </constraint>
     </constraints>
    </enum_val>
