@@ -1,0 +1,38 @@
+<printer id="printer/Epson-LP-S7500">
+  <make>Epson</make>
+  <model>LP-S7500</model>
+  <mechanism>
+    <laser/>
+    <color/>
+    <resolution>
+      <dpi>
+        <x>600</x>
+        <y>600</y>
+      </dpi>
+    </resolution>
+    <consumables>
+      <comments>
+        <en></en>
+      </comments>
+    <!--one or more "partno" elements.--></consumables>
+  </mechanism>
+  <url>http://www.epson.jp/products/offirio/printer/lps7500/</url>
+  <lang>
+    <proprietary />
+  </lang>
+  <autodetect>
+  <!--no known parport probe information--></autodetect>
+  <functionality>A</functionality>
+  
+  <driver>eplaser-jp</driver>
+  <!--no "contrib_url"-->
+  <comments>
+    <en>
+      Large format (A3/11x17) colour laser printer&lt;p&gt;
+      Epson provides a free (LGPL) driver for this printer. With this the
+      printer works to its full extent.&lt;p&gt;
+      A scanning add-on for this printer is available, so that one can make
+      an multi-function device (printing, scanning, copying) out of it.
+    </en>
+  </comments>
+</printer>
