@@ -1,3 +1,7 @@
+2008-08-20  AVASYS Corporation <pipsnews@avasys.jp>
+
+	* added the EPSON LP-S7500.
+
 2008-08-12  Till Kamppeter <till.kamppeter@gmail.com>
 
 	* db/source/driver/pxlmono.xml: Added HP LaserJet 1320 (Ubuntu bug
